--- a/haptopong/chai3d_project.vcxproj
+++ b/haptopong/chai3d_project.vcxproj
@@ -106,7 +106,9 @@
     <ClCompile Include="GameRulesManager.cpp" />
     <ClCompile Include="GfxScene.cpp" />
     <ClCompile Include="HapticResponseManager.cpp" />
+    <ClCompile Include="Hello.cpp" />
     <ClCompile Include="LinearResponse.cpp" />
+    <ClCompile Include="LocalRulesManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="Net.cpp" />
@@ -120,9 +122,11 @@
     <ClCompile Include="ShadowlessMesh.cpp" />
     <ClCompile Include="SimpleCountGameRules.cpp" />
     <ClCompile Include="SoundPlayer.cpp" />
+    <ClCompile Include="Message.cpp" />
     <ClCompile Include="Table.cpp" />
     <ClCompile Include="TestHapticCollisionScene.cpp" />
     <ClCompile Include="TestScene.cpp" />
+    <ClCompile Include="Welcome.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -137,8 +141,11 @@
     <ClInclude Include="GameRulesManager.h" />
     <ClInclude Include="GfxScene.h" />
     <ClInclude Include="HapticResponseManager.h" />
+    <ClInclude Include="Hello.h" />
     <ClInclude Include="LinearResponse.h" />
+    <ClInclude Include="LocalRulesManager.h" />
     <ClInclude Include="MenuScene.h" />
+    <ClInclude Include="Message.h" />
     <ClInclude Include="Net.h" />
     <ClInclude Include="NetworkScene.h" />
     <ClInclude Include="pch.h" />
@@ -155,6 +162,7 @@
     <ClInclude Include="TestHapticCollisionScene.h" />
     <ClInclude Include="TestScene.h" />
     <ClInclude Include="Util.h" />
+    <ClInclude Include="Welcome.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
