--- a/haptopong/chai3d_project.vcxproj
+++ b/haptopong/chai3d_project.vcxproj
@@ -96,6 +96,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AimAssistance.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="BallEvent.cpp" />
@@ -136,6 +137,7 @@
     <ClCompile Include="Welcome.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AimAssistance.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Ball.h" />
     <ClInclude Include="BallEvent.h" />
