--- a/haptopong/chai3d_project.vcxproj
+++ b/haptopong/chai3d_project.vcxproj
@@ -112,10 +112,12 @@
     <ClCompile Include="GlobalMoveAssistance.cpp" />
     <ClCompile Include="HapticResponseManager.cpp" />
     <ClCompile Include="Hello.cpp" />
+    <ClCompile Include="IgnoreEverythingRules.cpp" />
     <ClCompile Include="LinearResponse.cpp" />
     <ClCompile Include="LocalRulesManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MenuScene.cpp" />
+    <ClCompile Include="MetaGameInfo.cpp" />
     <ClCompile Include="Net.cpp" />
     <ClCompile Include="NetworkScene.cpp" />
     <ClCompile Include="Outside.cpp" />
@@ -155,10 +157,12 @@
     <ClInclude Include="GlobalMoveAssistance.h" />
     <ClInclude Include="HapticResponseManager.h" />
     <ClInclude Include="Hello.h" />
+    <ClInclude Include="IgnoreEverythingRules.h" />
     <ClInclude Include="LinearResponse.h" />
     <ClInclude Include="LocalRulesManager.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="Message.h" />
+    <ClInclude Include="MetaGameInfo.h" />
     <ClInclude Include="Net.h" />
     <ClInclude Include="NetworkScene.h" />
     <ClInclude Include="Outside.h" />
